@@ -57,8 +57,6 @@
 
 </div>
 
-
-
 <script type="text/javascript">
   is_checked = function(value, element) {
     return element.checked;
