@@ -7,6 +7,9 @@ webmaster_name: Webmaster
 notifiction_email: noreply@change-me.org
 auto_add_categories: false
 enable_rss: false
+invite_only: false
+invite_wait_period: 7
+invites_granted_per_month: 3
 num_items_per_page: 10
 num_max_peers: 10
 num_announce_interval_minutes: 30
