@@ -82,11 +82,15 @@ if 'test' != RAILS_ENV
   fed_file = File.join(RAILS_ROOT, 'config', 'federation.yml')
   if File.exist?(config_file)
     sites = YAML.load(IO.read(fed_file))
-    symbolized = []
-    sites.each do |hash|
-      symbolized << hash.symbolize_keys
+    if sites.nil?
+      TRUSTED_SITES = []
+    else
+      symbolized = []
+      sites.each do |hash|
+        symbolized << hash.symbolize_keys
+      end
+      TRUSTED_SITES = symbolized.freeze
     end
-     TRUSTED_SITES = symbolized.freeze
   else
     TRUSTED_SITES = []
   end
